// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Restaurant {
  id           Int           @id @default(autoincrement())
  name         String
  reservations Reservation[]
}

model Reservation {
  id        Int @id @default(autoincrement())
  partySize Int

  restaurant   Restaurant @relation(fields: [restaurantId], references: [id])
  restaurantId Int

  customer   Customer @relation(fields: [customerId], references: [id])
  customerId Int
}

model Customer {
  id       Int    @id @default(autoincrement())
  email    String @unique
  password String

  reservations Reservation[]
}
